Fix Dockerfile.prod to copy entire internal directory
- Modify Dockerfile.prod to copy the complete internal directory
- Ensures that generated modules and utils package are properly included
- Resolves 'No such file or directory' error when copying internal/utils

--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -58,7 +58,8 @@ RUN mkdir -p /app/temp /app/config /go/pkg/mod /go/src/github.com/careecodes
 # Copy the binary and supporting files from builder
 COPY --from=builder /app/server .
 COPY --from=builder /app/entrypoint-prod.sh .
-COPY --from=builder /app/internal/db/migrations /app/internal/db/migrations
+# Copy the entire internal directory to ensure all packages are available
+COPY --from=builder /app/internal /app/internal
 COPY --from=builder /app/scripts /app/scripts
 COPY --from=builder /app/go.mod /app/go.sum ./
 # Copy the Go modules cache to ensure dependencies are available
