--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -8,8 +8,13 @@ WORKDIR /app
 
 # Copy go module files first for better layer caching
 COPY go.mod go.sum ./
-COPY vendor/ ./vendor/
+
+# We won't copy the existing vendor directory to avoid inconsistency issues
+# Instead, we'll recreate it from scratch for better consistency
 RUN go mod download
+
+# Recreate the vendor directory to ensure consistency
+RUN go mod vendor
 
 # Download specific dependencies needed for scripts
 RUN go mod download github.com/bxcodec/faker/v4 && \
@@ -25,6 +30,10 @@ RUN wget https://github.com/sqlc-dev/sqlc/releases/download/v1.28.0/sqlc_1.28.0_
     rm sqlc_1.28.0_linux_amd64.tar.gz
 
 RUN sqlc generate
+
+# Clean cache and recreate vendor directory to avoid inconsistencies
+RUN go clean -cache -modcache
+RUN go mod vendor
 
 # Build the Go application
 RUN CGO_ENABLED=0 GOOS=linux go build -o server -ldflags="-s -w" ./server.go
@@ -51,6 +60,13 @@ RUN wget -O migrate.tar.gz https://github.com/golang-migrate/migrate/releases/do
     mv migrate /usr/local/bin/migrate && \
     chmod +x /usr/local/bin/migrate && \
     rm migrate.tar.gz
+
+# Install Task CLI
+RUN wget -O task.tar.gz https://github.com/go-task/task/releases/download/v3.33.1/task_linux_amd64.tar.gz && \
+    tar -xzvf task.tar.gz && \
+    mv task /usr/local/bin/task && \
+    chmod +x /usr/local/bin/task && \
+    rm task.tar.gz
 
 # Create runtime directories
 RUN mkdir -p /app/temp /app/config /go/pkg/mod /go/src/github.com/careecodes
