Remove Puppeteer-based automation for Documenso integration
- Replace with manual configuration through admin UI
- Remove documenso_branding.js and related Node.js dependencies
- Simplify Docker images by removing Chrome dependencies
- Update documentation with manual setup instructions
- Improve security by using existing Admin Settings page

This change improves reliability by using established UI paths rather than
fragile browser automation for sensitive configuration.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,59 +42,17 @@ services:
   documenso:
     image: documenso/documenso:latest
     container_name: documenso
+    env_file: ./docker/documenso/.env.development.local
     depends_on:
       documenso-postgres:
         condition: service_healthy
-    environment:
-      - PORT=3000
-      - NEXT_PRIVATE_INTERNAL_WEBAPP_URL=http://documenso:3000
-      - NEXTAUTH_URL=http://localhost:3000
-      - NEXTAUTH_SECRET=RLEr6zqMuCKqF72TWD37Fw5eZ4C1T6puRZjVswbdvnc=
-      - NEXT_PRIVATE_ENCRYPTION_KEY=5W2//zrgqplKk4lvyW0X5dRbndCvp4BjOKS7M0Euaao=
-      - NEXT_PRIVATE_ENCRYPTION_SECONDARY_KEY=eA8YWF9UYQCQ4gAvLCo04xWUtqXt0tdRE3i505L9v5k=do
-      - NEXT_PUBLIC_WEBAPP_URL=http://localhost:3000
-      - NEXT_PUBLIC_MARKETING_URL=http://localhost:3000
-      - NEXT_PRIVATE_DATABASE_URL=postgresql://documenso:password@documenso-postgres:5432/documenso
-      - NEXT_PRIVATE_DIRECT_DATABASE_URL=postgresql://documenso:password@documenso-postgres:5432/documenso
-      - NEXT_PUBLIC_UPLOAD_TRANSPORT=database
-      - NEXT_PRIVATE_SMTP_TRANSPORT=log
-      - NEXT_PRIVATE_SMTP_FROM_NAME=RentDaddy
-      - NEXT_PRIVATE_SMTP_FROM_ADDRESS=noreply@example.com
-      - NEXT_PRIVATE_SIGNING_LOCAL_FILE_PATH=/opt/documenso/cert.p12
-      - NEXT_PRIVATE_SIGNING_PASSPHRASE=teamezraapp
-      - NEXT_PUBLIC_DISABLE_SIGNUP=false
     ports:
       - "3000:3000"
     volumes:
       - ./docker/documenso/cert.p12:/opt/documenso/cert.p12
     networks:
       - app-network
-  
-  documenso-worker:
-    build:
-      context: ./worker/documenso-worker
-    container_name: documenso-worker
-    depends_on:
-      documenso-postgres:
-        condition: service_healthy
-      documenso:
-        condition: service_started
-    environment:
-      - BACKEND_URL=http://backend:8080
-      - WEBHOOK_PATH=/webhooks/documenso
-      - POLL_INTERVAL=15
-      - POSTGRES_USER=documenso
-      - POSTGRES_DB=documenso
-      - POSTGRES_HOST=documenso-postgres
-      - POSTGRES_PORT=5432
-      - POSTGRES_PASSWORD=password
-      - STARTUP_DELAY=30
-      - MAX_CONNECTION_RETRIES=10
-      - DOCUMENSO_BASE_URL=http://documenso:3000
-      - DEBUG=true
-      - DOCUMENSO_WEBHOOK_SECRET=your_webhook_secret
-    networks:
-      - app-network
+
   
   backend:
     build:
@@ -153,15 +111,16 @@ services:
     image: ngrok/ngrok:latest
     container_name: ngrok
     restart: unless-stopped
+    env_file:
+      - frontend/app/.env.development.local 
     ports:
       - "4040:4040"
-    environment:
-      - NGROK_AUTHTOKEN=${NGROK_AUTHTOKEN}
     command: "http backend:8080"
     networks:
       - app-network
     depends_on:
       - backend
+    
 
 networks:
   app-network:
