--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -33,15 +33,7 @@ RUN CGO_ENABLED=0 GOOS=linux go build -o server -ldflags="-s -w" ./server.go
 FROM alpine:latest
 
 # Install packages needed at runtime
-RUN apk add --no-cache ca-certificates tzdata postgresql-client wget git bash go \
-    nodejs npm chromium nss freetype harfbuzz ttf-freefont
-
-# Setup Puppeteer
-ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true \
-    PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium-browser
-
-# Install Puppeteer globally
-RUN npm install -g puppeteer
+RUN apk add --no-cache ca-certificates tzdata postgresql-client wget git bash go
 
 WORKDIR /app
 
