Complete documenso-worker removal and update references
- Update PROJECT-STRUCTURE.md to remove worker references
- Enhance webhook handling in leases.go with better logging
- Update test_documenso_webhooks.sh to reflect new architecture
- Remove docker-compose.prod-test.yml
- Update seeder scripts to work with direct Documenso integration

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,8 @@ backend/vendor
 
 # Wildcard ignore for any .env files
 **/*.env
+**/*.env.production.local
+**/*.env.development.local
 
 # Backend
 # Do we need this here btw for the backend?
