Update .gitignore to not ignore .env*.example files

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@ frontend/app/.env.local
 frontend/app/.env.development.local
 frontend/app/.env.test.local
 frontend/app/.env.production.local
+# But don't ignore example files
+!frontend/app/.env*.example
 
 # Backend dependencies and build
 backend/vendor
@@ -29,6 +31,9 @@ backend/vendor
 **/*.env
 **/*.env.production.local
 **/*.env.development.local
+
+# But don't ignore example files
+!**/*.env*.example
 
 # Backend
 # Do we need this here btw for the backend?
@@ -44,6 +49,8 @@ backend/.env.local
 backend/.env.development.local
 backend/.env.test.local
 backend/.env.production.local
+# But don't ignore example files
+!backend/.env*.example
 
 # Editor directories and files
 .vscode/*
