--- a/frontend/app/.env.production.local.example
+++ b/frontend/app/.env.production.local.example
@@ -11,8 +11,8 @@ VITE_BACKEND_URL=https://api.yourdomain.com
 # Frontend Configuration
 FRONTEND_PORT=5173
 
-# Documenso integration
-VITE_DOCUMENSO_PUBLIC_URL=https://docs.yourdomain.com
+# Note: Documenso integration is configured in the backend only
+# There are no Documenso-specific environment variables needed for the frontend
 
 # Domain configuration
 DOMAIN_NAME=yourdomain.com  # Used to construct default URLs
