Security: Remove certificates from git and update .gitignore
  - Remove all certificate files from git tracking
  - Update .gitignore to ignore all certificate file types
  - Keep certificates on filesystem but prevent future commits
  - Add patterns for .key, .crt, .pem, .p12, .pfx files

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,21 @@ logs/
 logging/
 *.log.*
 docker/documenso/cert.p12
+
+# Security - NEVER commit certificates, keys, or credentials
+*.key
+*.crt
+*.pem
+*.p12
+*.pfx
+*.cer
+*.cert
+*.csr
+.ssl/
+certs/
+certificates/
+
+# But allow example/template files
+!*.example.key
+!*.example.crt
+!*.template.*
