Make Slack notifications optional in deploy workflow
- Add continue-on-error to Slack notification step
- This prevents workflow failure if SLACK_WEBHOOK secret is not configured
- All other warnings are for required secrets already synced from AWS

--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -242,6 +242,7 @@ jobs:
 
       - name: Notify deployment status
         if: always()
+        continue-on-error: true
         uses: 8398a7/action-slack@v3
         with:
           status: ${{ job.status }}
@@ -251,4 +252,4 @@ jobs:
             Author: ${{ github.actor }}
             Branch: ${{ github.ref }}
         env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK || '' }}
