Fix frontend Dockerfile.prod to not require package-lock.json
- Remove package-lock.json from COPY command as it doesn't exist
- Change npm ci to npm install to work without lock file
- This matches the CI workflow behavior

--- a/frontend/app/Dockerfile.prod
+++ b/frontend/app/Dockerfile.prod
@@ -17,9 +17,9 @@ ENV VITE_ENV=$VITE_ENV
 ENV NODE_ENV=production
 
 # Pre-install only what's needed for dependency resolution
-COPY package.json package-lock.json ./
+COPY package.json ./
 # We need to include dev dependencies for the build process
-RUN NODE_ENV=development npm ci
+RUN npm install
 
 # Copy all source files after installing dependencies (better Docker caching)
 # But first create our own .env.production.local file to ensure build args are used
