--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,16 +22,6 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
-          
-      - name: Cache Go modules
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/go/pkg/mod
-            ~/.cache/go-build
-          key: ${{ runner.os }}-go-${{ hashFiles('backend/go.sum') }}
-          restore-keys: |
-            ${{ runner.os }}-go-
       
       - name: Download Go modules
         working-directory: ./backend
@@ -73,16 +63,6 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
-          
-      - name: Cache Go modules
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/go/pkg/mod
-            ~/.cache/go-build
-          key: ${{ runner.os }}-go-${{ hashFiles('backend/go.sum') }}
-          restore-keys: |
-            ${{ runner.os }}-go-
       
       - name: Download Go modules
         working-directory: ./backend
@@ -129,6 +109,7 @@ jobs:
           file: ./backend/coverage.out
           flags: backend
           name: backend-coverage
+        continue-on-error: true
 
   frontend-lint:
     name: Frontend Lint
@@ -140,8 +121,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
-          cache-dependency-path: ./frontend/app/package.json
           
       - name: Install dependencies
         working-directory: ./frontend/app
@@ -162,8 +141,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
-          cache-dependency-path: ./frontend/app/package.json
           
       - name: Install dependencies
         working-directory: ./frontend/app
@@ -184,6 +161,7 @@ jobs:
         with:
           name: frontend-build
           path: ./frontend/app/dist
+        continue-on-error: true
 
   security-scan:
     name: Security Scan
@@ -203,6 +181,7 @@ jobs:
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: 'trivy-results.sarif'
+        continue-on-error: true
 
   docker-build:
     name: Docker Build Test
