--- a/frontend/app/Dockerfile.prod
+++ b/frontend/app/Dockerfile.prod
@@ -19,7 +19,7 @@ ENV NODE_ENV=production
 # Pre-install only what's needed for dependency resolution
 COPY package.json ./
 # We need to include dev dependencies for the build process
-RUN npm install
+RUN npm install --include=dev
 
 # Copy all source files after installing dependencies (better Docker caching)
 # But first create our own .env.production.local file to ensure build args are used
