Fix TypeScript errors properly
- Remove unused Alert import from LeaseCardComponent
- Fix LeaseCardProps to use LeaseData type for externalLeaseData
- Add default empty string for optional alertDescription
- Remove unused Button import from TenantDashBoard
- Handle null lease data with || undefined
- Revert Dockerfile to use proper npm run build

--- a/frontend/app/Dockerfile.prod
+++ b/frontend/app/Dockerfile.prod
@@ -45,8 +45,8 @@ ENV VITE_DOCUMENSO_PUBLIC_URL=${VITE_DOCUMENSO_PUBLIC_URL}
 RUN touch src/utils/apiConfig.ts
 
 # Run a clean build with explicit NODE_ENV only
-# Skip TypeScript checking due to type errors, just run Vite build
-RUN NODE_ENV=production npx vite build
+# This will use VITE_ENV from .env file
+RUN NODE_ENV=production npm run build
 
 # Verify build - check for localhost references in built files
 RUN echo "Checking for localhost references in built files..." && \
