Fix ECS task definition deployment
- Remove extra fields from task definition JSON before registering
- AWS adds fields like taskDefinitionArn, revision, status that aren't valid inputs
- Use jq del() to remove these fields before register-task-definition

--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -122,8 +122,12 @@ jobs:
       - name: Update task definition with new images
         id: task-def
         run: |
-          # Update both container images in the task definition
-          jq '.containerDefinitions[0].image = "'$ECR_REGISTRY'/'$ECR_REPOSITORY_BACKEND':'$IMAGE_TAG'" | .containerDefinitions[1].image = "'$ECR_REGISTRY'/'$ECR_REPOSITORY_FRONTEND':'$IMAGE_TAG'"' task-definition.json > new-task-definition.json
+          # Remove fields that are not valid for register-task-definition
+          # and update both container images in the task definition
+          jq 'del(.taskDefinitionArn, .revision, .status, .requiresAttributes, .compatibilities, .registeredAt, .registeredBy) | 
+              .containerDefinitions[0].image = "'$ECR_REGISTRY'/'$ECR_REPOSITORY_BACKEND':'$IMAGE_TAG'" | 
+              .containerDefinitions[1].image = "'$ECR_REGISTRY'/'$ECR_REPOSITORY_FRONTEND':'$IMAGE_TAG'"' \
+              task-definition.json > new-task-definition.json
           echo "task-definition=new-task-definition.json" >> $GITHUB_OUTPUT
 
       - name: Deploy Amazon ECS task definition
