Add timeout to ECS deployment wait
- Add 10-minute timeout to prevent hanging deployments
- Show deployment status if timeout occurs
- This helps diagnose stuck deployments

--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -145,10 +145,18 @@ jobs:
             --task-definition $NEW_TASK_DEF_ARN \
             --force-new-deployment
           
-          # Wait for service stability
-          aws ecs wait services-stable \
+          # Wait for service stability (timeout after 10 minutes)
+          timeout 600 aws ecs wait services-stable \
             --cluster ${{ env.ECS_CLUSTER }} \
-            --services ${{ env.ECS_SERVICE }}
+            --services ${{ env.ECS_SERVICE }} || {
+            echo "Service update timed out after 10 minutes. Checking deployment status..."
+            aws ecs describe-services \
+              --cluster ${{ env.ECS_CLUSTER }} \
+              --services ${{ env.ECS_SERVICE }} \
+              --query 'services[0].deployments' \
+              --output json
+            exit 1
+          }
 
   update-documenso-cert:
     name: Update Documenso Certificate
