Create separate Terraform config for GitHub Actions deployment
- Add main-github-actions.tf that doesn't use AWS Secrets Manager
- Update workflow to use the GitHub Actions specific Terraform file
- Remove unnecessary secret ARN environment variables
- This allows GitHub Actions to deploy using GitHub secrets directly

The original main.tf remains unchanged for local deployments.

--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -9,8 +9,6 @@ on:
 env:
   AWS_REGION: us-east-2
   AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
-  BACKEND_SECRET_ARN: ${{ secrets.BACKEND_SECRET_ARN }}
-  DOCUMENSO_SECRET_ARN: ${{ secrets.DOCUMENSO_SECRET_ARN }}
 
 jobs:
   terraform:
@@ -35,15 +33,17 @@ jobs:
       
       - name: Terraform Init
         working-directory: ./deployment/simplified_terraform
-        run: terraform init
+        run: |
+          # Use the GitHub Actions specific Terraform file
+          mv main.tf main-local.tf.backup || true
+          mv main-github-actions.tf main.tf
+          terraform init
       
       - name: Terraform Plan
         working-directory: ./deployment/simplified_terraform
         run: |
           terraform plan \
             -var="aws_account_id=${{ env.AWS_ACCOUNT_ID }}" \
-            -var="backend_secret_arn=${{ env.BACKEND_SECRET_ARN }}" \
-            -var="documenso_secret_arn=${{ env.DOCUMENSO_SECRET_ARN }}" \
             -out=tfplan
       
       - name: Terraform Apply
